--- a/xray/config.json
+++ b/xray/config.json
@@ -1,29 +1,10 @@
-  {
-  "log": {
-    "loglevel": "warning",
+{
+  "log" : {
+    "access": "/var/log/xray/access.log",
     "error": "/var/log/xray/error.log",
-    "access": "/var/log/xray/access.log"
-   },
-   "api": {
-    "services": [
-      "HandlerService",
-      "LoggerService",
-      "StatsService"
-     ],
-    "tag": "api"
-    },
-    "stats": {},
-    "policy": {
-    "levels": {
-      "0": {
-        "handshake": 2,
-        "connIdle": 128,
-        "statsUserUplink": true,
-        "statsUserDownlink": true
-        }
-       }
-      },
-      "inbounds": [
+    "loglevel": "warning"
+  },
+  "inbounds": [
       {
       "listen": "127.0.0.1",
       "port": 10000,
@@ -32,8 +13,8 @@
         "address": "127.0.0.1"
       },
       "tag": "api"
-      },
-      {
+    },
+   {
      "listen": "127.0.0.1",
      "port": "10001",
      "protocol": "vless",
@@ -41,7 +22,7 @@
           "decryption":"none",
             "clients": [
                {
-                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+                 "id": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #vless
              }
           ]
@@ -60,7 +41,7 @@
       "settings": {
             "clients": [
                {
-                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0",
+                 "id": "36326ea2-6994-4d53-bcd5-f43bbdaec562",
                  "alterId": 0
 #vmess
              }
@@ -70,10 +51,10 @@
          "network": "ws",
             "wsSettings": {
                 "path": "/vmess"
-           }
-         }
-       },
-       {
+          }
+        }
+     },
+    {
       "listen": "127.0.0.1",
       "port": "10003",
       "protocol": "trojan",
@@ -81,7 +62,7 @@
           "decryption":"none",
            "clients": [
               {
-                 "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+                 "password": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #trojanws
               }
           ],
@@ -94,7 +75,7 @@
             }
          }
      },
-      {
+    {
          "listen": "127.0.0.1",
         "port": "10004",
         "protocol": "shadowsocks",
@@ -102,7 +83,7 @@
            "clients": [
            {
            "method": "aes-128-gcm",
-          "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+          "password": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #ssws
            }
           ],
@@ -123,7 +104,7 @@
          "decryption":"none",
            "clients": [
              {
-               "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+               "id": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #vlessgrpc
              }
           ]
@@ -142,7 +123,7 @@
       "settings": {
             "clients": [
                {
-                 "id": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0",
+                 "id": "36326ea2-6994-4d53-bcd5-f43bbdaec562",
                  "alterId": 0
 #vmessgrpc
              }
@@ -163,7 +144,7 @@
           "decryption":"none",
              "clients": [
                {
-                 "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
+                 "password": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
 #trojangrpc
                }
            ]
@@ -183,8 +164,8 @@
         "clients": [
           {
              "method": "aes-128-gcm",
-             "password": "1d1c1d94-6987-4658-a4dc-8821a30fe7e0"
-#ssgrpc 
+             "password": "36326ea2-6994-4d53-bcd5-f43bbdaec562"
+#ssgrpc
            }
          ],
            "network": "tcp,udp"
@@ -209,34 +190,26 @@
     }
   ],
   "routing": {
-    "domainStrategy": "AsIs",
     "rules": [
       {
-        "inboundTag": [
-          "dnsIn"
-        ],
-        "outboundTag": "dnsOut",
-        "type": "field"
-      },
-      {
-        "inboundTag": [
-          "dnsQuery"
-        ],
-        "outboundTag": "direct",
-        "type": "field"
-      },
-      {
-        "outboundTag": "direct",
-        "protocol": [
-          "bittorrent"
-        ],
-        "type": "field"
-      },
-      {
         "type": "field",
-        "outboundTag": "block",       
         "ip": [
-          "0.0.0.0/8", "10.0.0.0/8", "100.64.0.0/10", "169.254.0.0/16", "172.16.0.0/12", "192.0.0.0/24", "192.0.2.0/24", "192.168.0.0/16", "198.18.0.0/15", "198.51.100.0/24", "203.0.113.0/24", "::1/128", "fc00::/7", "fe80::/10"]
+          "0.0.0.0/8",
+          "10.0.0.0/8",
+          "100.64.0.0/10",
+          "169.254.0.0/16",
+          "172.16.0.0/12",
+          "192.0.0.0/24",
+          "192.0.2.0/24",
+          "192.168.0.0/16",
+          "198.18.0.0/15",
+          "198.51.100.0/24",
+          "203.0.113.0/24",
+          "::1/128",
+          "fc00::/7",
+          "fe80::/10"
+        ],
+        "outboundTag": "blocked"
       },
       {
         "inboundTag": [
@@ -251,34 +224,7 @@
         "protocol": [
           "bittorrent"
         ]
-      },
-      {
-        "type": "field",
-        "outboundTag": "proxy",
-        "ip": ["1.1.1.1/32", "1.0.0.1/32",
-          "8.8.8.8/32", "8.8.4.4/32", "geoip:us", "geoip:ca", "geoip:cloudflare", "geoip:cloudfront", "geoip:facebook", "geoip:fastly", "geoip:google", "geoip:netflix", "geoip:telegram", "geoip:yt", "geoip:twitter"]
-      },
-      {
-        "type": "field",
-        "outboundTag": "block",       
-        "ip": [
-          "0.0.0.0/8", "10.0.0.0/8", "100.64.0.0/10", "169.254.0.0/16", "172.16.0.0/12", "192.0.0.0/24", "192.0.2.0/24", "192.168.0.0/16", "198.18.0.0/15", "198.51.100.0/24", "203.0.113.0/24", "::1/128", "fc00::/7", "fe80::/10"]
-      },
-      {
-        "type": "field",
-        "outboundTag": "direct",
-        "ip": ["223.5.5.5/32", "119.29.29.29/32", "180.76.76.76/32", "114.114.114.114/32", "geoip:cn", "geoip:jp", "geoip:in", "geoip:private"]
-      },
-      {
-        "type": "field",
-        "outboundTag": "reject",
-        "domain": ["geosite:category-ads-all"]
-      },
-      {
-        "type": "field",
-        "outboundTag": "direct",
-        "network": "tcp,udp"
-      } 
+      }
     ]
   },
   "stats": {},
@@ -300,33 +246,123 @@
       "statsInboundDownlink": true,
       "statsOutboundUplink" : true,
       "statsOutboundDownlink" : true
-     }
-    },
-    "dns": {
-      "hosts": {
-        "dns.google": "8.8.8.8",
-        "dns.pub": "119.29.29.29",
-        "dns.alidns.com": "223.5.5.5",
-        "geosite:category-ads-all": "127.0.0.1"
-      },
-      "servers": [
-        {
-          "address": "https://1.1.1.1/dns-query",
-          "domains": ["geosite:geolocation-!cn"],
-          "expectIPs": ["geoip:!cn"]
-        },
-        "8.8.8.8",
-        {
-          "address": "114.114.114.114",
-          "port": 53,
-          "domains": ["geosite:cn", "geosite:category-games@cn"],
-          "expectIPs": ["geoip:cn"],
-          "skipFallback": true
-        },
-        {
-          "address": "localhost",
-          "skipFallback": true
-        }
-       ]
-      }
     }
+  }
+}
+{
+  "outbounds": [
+    {
+      "protocol": "dns",
+      "tag": "dns-out"
+    },
+    {
+      "streamSettings": {
+        "sockopt": {
+          "mark": 255
+        }
+      },
+      "settings": {
+        "domainStrategy": "UseIPv4"
+      },
+      "protocol": "freedom",
+      "tag": "direct"
+    },
+    {
+      "protocol": "blackhole",
+      "tag": "blackhole"
+    },
+    {
+      "settings": {
+        "servers": [
+          {
+            "port": 10000,
+            "address": "127.0.0.1"
+          }
+        ]
+      },
+      "streamSettings": {
+        "network": "tcp",
+        "security": "none"
+      },
+      "protocol": "socks",
+      "tag": "out"
+    }
+  ],
+  "log": {
+    "loglevel": "warning"
+  },
+  "dns": {
+    "hosts": {
+      "dns.tiarap": "174.138.21.128",
+      "dns.1host": "76.76.2.38",
+      "geosite:category-ads-all": "127.0.0.1"
+    },
+    "servers": [
+      {
+        "address": "https://doh.tiarap.org/dns-query",
+        "domains": ["geosite:geolocation-!cn"],
+        "expectIPs": ["geoip:!cn"]
+      },
+      "174.138.21.128",
+      {
+        "address": "174.138.21.128",
+        "port": 53,
+        "domains": ["geosite:id", "geosite:category-games@id"],
+        "expectIPs": ["geoip:id"],
+        "skipFallback": true
+      },
+      {
+        "address": "localhost",
+        "skipFallback": true
+      }
+    ]
+  },
+  "routing": {
+    "rules": [
+      {
+        "type": "field",
+        "outboundTag": "Reject",
+        "domain": ["geosite:category-ads-all"]
+      },
+      {
+        "type": "field",
+        "outboundTag": "Direct",
+        "domain": [
+          "geosite:private",
+          "geosite:apple-id",
+          "geosite:google-id",
+          "geosite:tld-id",
+          "geosite:category-games@id"
+        ]
+      },
+      {
+        "type": "field",
+        "outboundTag": "Proxy",
+        "domain": ["geosite:geolocation-!cn"]
+      },
+      {
+        "type": "field",
+        "outboundTag": "Direct",
+        "domain": ["geosite:id"]
+      },
+      {
+        "type": "field",
+        "outboundTag": "Proxy",
+        "network": "tcp,udp"
+      }
+    ]
+  },
+  "inbounds": [
+    {
+      "port": 10000,
+      "protocol": "dokodemo-door",
+      "settings": {
+        "port": 53,
+        "network": "udp",
+        "address": "174.138.21.128"
+      },
+      "tag": "dns-in",
+      "listen": "127.0.0.1"
+    }
+  ]
+}
